[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-workflow"
version = "0.1.0"
description = "Production multi-agent AI Research Assistant powered by LangGraph, Groq (free), and DuckDuckGo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangGraph core
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=1.0.0",

    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",

    # Web search (free, no API key)
    "ddgs>=6.0.0",

    # Database (SQLite — no server needed)
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",

    # Config & validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # HTTP & scraping
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",

    # CLI & display
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
research = "main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
